// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space renders with different align 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 0px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-2"
    >
      <span>
        B
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Space renders with different align 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 0px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-2"
    >
      <span>
        B
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Space renders with different align 3`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 0px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-2"
    >
      <span>
        B
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Space renders with different align 4`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: baseline;
  -ms-flex-pack: baseline;
  -webkit-justify-content: baseline;
  justify-content: baseline;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 0px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-2"
    >
      <span>
        B
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Space renders with divider 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 0px;
}

.emotion-3 {
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-color: #e5e6ebff;
  border-style: solid;
  height: 1em;
  -webkit-flex-basis: center;
  -ms-flex-preferred-size: center;
  flex-basis: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-1 emotion-3"
    />
    <div
      class="emotion-4"
    >
      <span>
        B
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Space renders with wrap 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 8px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="emotion-1"
    >
      <span>
        B
      </span>
    </div>
    <div
      class="emotion-1"
    >
      <span>
        C
      </span>
    </div>
    <div
      class="emotion-1"
    >
      <span>
        D
      </span>
    </div>
    <div
      class="emotion-1"
    >
      <span>
        E
      </span>
    </div>
    <div
      class="emotion-6"
    >
      <span>
        F
      </span>
    </div>
  </div>
</DocumentFragment>
`;
